--- a/ecommerce/views/navbar.pug
+++ b/ecommerce/views/navbar.pug
@@ -2,7 +2,7 @@ nav.navbar.is-primary
     .container
         .navbar-brand
             a.navbar-item
-                img(src='https://bulma.io/images/bulma-logo-white.png' width='100' height='20')
+                img(src='/static/logo/octolion-white@2x.png' width='100' height='20')
         .navbar-menu
             .navbar-end
                 .navbar-item
